Optimize solver